--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,31 +13,36 @@
     "test:coverage": "vitest --coverage"
   },
   "dependencies": {
+    "@apollo/client": "^3.8.8",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
+    "@hookform/resolvers": "^3.3.2",
     "@mui/material": "^7.2.0",
+    "@stripe/react-stripe-js": "^3.9.0",
+    "@stripe/stripe-js": "^7.8.0",
+    "@tanstack/react-query": "^5.17.1",
     "axios": "^1.11.0",
     "chart.js": "^4.5.0",
+    "cytoscape": "^3.33.1",
+    "cytoscape-cola": "^2.5.1",
+    "cytoscape-popper": "^4.0.1",
+    "date-fns": "^3.0.6",
+    "framer-motion": "^10.17.0",
+    "graphql": "^16.8.1",
     "react": "^19.1.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
-    "socket.io-client": "^4.7.2",
-    "@apollo/client": "^3.8.8",
-    "graphql": "^16.8.1",
-    "react-router-dom": "^6.21.1",
-    "recharts": "^2.10.3",
-    "react-wordcloud": "^1.2.7",
-    "simple-peer": "^9.11.1",
-    "react-webcam": "^7.2.0",
-    "@tanstack/react-query": "^5.17.1",
-    "zustand": "^4.4.7",
-    "react-hot-toast": "^2.4.1",
-    "framer-motion": "^10.17.0",
     "react-dropzone": "^14.2.3",
-    "date-fns": "^3.0.6",
     "react-hook-form": "^7.48.2",
-    "@hookform/resolvers": "^3.3.2",
-    "yup": "^1.3.3"
+    "react-hot-toast": "^2.4.1",
+    "react-router-dom": "^6.21.1",
+    "react-webcam": "^7.2.0",
+    "react-wordcloud": "^1.2.7",
+    "recharts": "^2.15.4",
+    "simple-peer": "^9.11.1",
+    "socket.io-client": "^4.7.2",
+    "yup": "^1.3.3",
+    "zustand": "^4.4.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
